<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kornevstas</groupId>
    <artifactId>DiagnosticApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            
            <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <version>3.2.0</version> <!-- Оптимально вказати актуальну версію -->
            <configuration>
                <archive>
                    <manifest>
                        <mainClass>com.kornevstas.diagnosticapp.LoadingScreen</mainClass> <!-- Замініть на ваш головний клас -->
                    </manifest>
                </archive>
            </configuration>
        </plugin>
            
        </plugins>
    </build>
    <dependencies>
         <dependency>
    <groupId>com.github.oshi</groupId>
    <artifactId>oshi-core</artifactId>
    <version>5.8.0</version>
</dependency>
        
        <!-- https://mvnrepository.com/artifact/com.profesorfalken/jSensors -->
<dependency>
    <groupId>com.profesorfalken</groupId>
    <artifactId>jSensors</artifactId>
    <version>2.2.1</version>
</dependency>      


    </dependencies>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <exec.mainClass>com.kornevstas.diagnosticapp.DiagnosticApp</exec.mainClass>
    </properties>
</project>